Fix "<pre><code>" overflow-x

--- a/src/styles/pages/postDetail.sass
+++ b/src/styles/pages/postDetail.sass
@@ -45,6 +45,7 @@
     max-width: 100%
     padding: 0 3.5vw 1vh
     margin: auto
+    overflow-x: auto
 
 @media only screen and (min-width: 730px)
   .postDetail
